# qface-qtro

./: MANIFEST.in  README.md  TODOS.md  cli.py  mkdocs.yml  qtro.py  qtro.yml  requirements.txt  setup.py
docs/: client.rst  conf.py  examples.rst  guide.md  index.md  index.rst  motivation.rst  plugin.rst  server.rst  service.rst  usage.rst
examples/echo/: Main.qml  PingPanel.qml  PingPanelForm.ui.qml  echo.qml  echo.qmlproject
fsview/: fsview.qmlproject
in/: echo.qface  echo.qface.old  org.example.pim.qface  ping.qface  ping.qface.old
interfaces/: empty.qface  filesystem.qface  primitive.qface  single.qface
qtro/: __about__.py  qtro.py  qtro.yml
qtro/templates/: CMakeLists.txt  libproject.pro  project.pri  project.pro
qtro/templates/apps/: apps.pro
qtro/templates/apps/app/: app.pro  main.cpp  qml.qrc  qtquickcontrols2.conf
qtro/templates/apps/app/qml/: Main.qml
qtro/templates/clients/client/: CMakeLists.txt  client.pro
qtro/templates/clients/client/docs/: project.qdocconf
qtro/templates/clients/client/lib/: interface.cpp  interface.h  lib.pri  lib.pro  uselib.pri
qtro/templates/clients/client/plugin/: plugin.cpp  plugin.pro
qtro/templates/libs/: libs.pro
qtro/templates/libs/lib_client/: CMakeLists.txt  client.pro  core.cpp  core.h  interface.cpp  interface.h  interfacebase.cpp  interfacebase.h  replica.cpp  replica.h  structmodel.cpp  structmodel.h  use_lib_client.pri  useclientlib.pri
qtro/templates/libs/lib_service/: core.cpp  core.h  service.h  service.pro  servicebase.cpp  servicebase.h  structmodel.cpp  structmodel.h  use_lib_service.pri  useservicelib.pri
qtro/templates/plugins/: plugins.pro
qtro/templates/plugins/plugin/: CMakeLists.txt  interface.h  module.pri  plugin.cpp  plugin.h  plugin.pro  qmldir
qtro/templates/servers/: servers.pro  start.sh  stop.sh
qtro/templates/servers/server/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  server.pro  service.cpp  service.h
qtro/templates/servers/server/engine/: engine.cpp  engine.h  engine.pri
qtro/templates/shared/: repc.rep  server.conf  shared.pri  shared.pro  struct.cpp  struct.h
qtro/templates/shared/lib_shared/: lib_shared.pro  use_lib_shared.pri
qtro/templates/shared/lib_shared_module/: enum.h  lib_shared_module.pro  struct.cpp  struct.h  use_lib_shared_module.pri
qtro/templates/shared/module/: enum.h  module.pri  struct.cpp  struct.h
templates/: libproject.pro  project.pro  qmake.conf
templates/engines/engine/: engine.pro  libengine.pri
templates/plugins/: abstractinterface.cpp  abstractinterface.h  core.cpp  core.h  generated.pri  interface.h  module.cpp  module.h  plugin.cpp  plugin.h  plugin.pro  plugins.pro
templates/plugins/plugin/: docs.pri  interface.cpp  interface.h  plugin.cpp  plugin.h  plugin.pro  qmldir
templates/qtro/: client.h  replica.h
templates/server/: abstractsource.cpp  abstractsource.h  generated.pri  main.cpp  server.pro  servers.pro  sourceapi.h
templates/servers/: servers.pro
templates/servers/server/: main.cpp  server.pro  service.cpp  service.h
templates/shared/: enum.h  project.qrc  repc.rep  struct.cpp  struct.h  structmodel.h
